# DAY1_3

./: .gitattributes  pyproject.toml
scripts/: test_code.ipynb
src/: blabla.py  fonctions.py
